--- a/package.json
+++ b/package.json
@@ -23,18 +23,28 @@
     "start": "next start"
   },
   "dependencies": {
+    "@portabletext/react": "^2.0.1",
+    "@sanity/icons": "^2",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/types": "^3",
+    "@sanity/ui": "^1",
+    "@sanity/vision": "^3.4.0",
     "framer-motion": "^9.0.2",
     "gsap": "^3.11.4",
     "locomotive-scroll": "^4.1.4",
-    "next": "^13.1.6",
+    "next": "^13",
+    "next-sanity": "4.1.5",
     "next-seo": "^5.15.0",
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.0",
     "postcss-preset-env": "^8.0.1",
     "preact": "^10.12.1",
-    "react": "^18.2.0",
+    "react": "^18",
     "react-dom": "^18.2.0",
-    "react-locomotive-scroll": "^0.2.2"
+    "react-locomotive-scroll": "^0.2.2",
+    "sanity": "^3",
+    "sanity-plugin-iframe-pane": "^2.1.1",
+    "styled-components": "^5.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
