--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.3",
     "@portabletext/react": "^2.0.1",
     "@sanity/icons": "^2",
     "@sanity/image-url": "^1.0.2",
