update detail post data

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next": "^13",
     "next-sanity": "4.1.5",
     "next-seo": "^5.15.0",
+    "notion-to-md": "^2.5.5",
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.0",
     "postcss-preset-env": "^8.0.1",
@@ -44,6 +45,7 @@
     "react": "^18",
     "react-dom": "^18.2.0",
     "react-locomotive-scroll": "^0.2.2",
+    "react-markdown": "^8.0.5",
     "sanity": "^3",
     "sanity-plugin-iframe-pane": "^2.1.1",
     "styled-components": "^5.2",
