--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@sanity/types": "^3",
     "@sanity/ui": "^1",
     "@sanity/vision": "^3.4.0",
+    "@studio-freight/lenis": "^0.2.28",
     "axios": "^1.3.3",
     "framer-motion": "^9.0.2",
     "gsap": "^3.11.4",
