--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "framer-motion": "^9.0.2",
     "gsap": "^3.11.4",
     "locomotive-scroll": "^4.1.4",
+    "matter-js": "^0.19.0",
     "next": "^13",
     "next-sanity": "4.1.5",
     "next-seo": "^5.15.0",
