--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "dependencies": {
     "@notionhq/client": "^2.2.3",
     "@portabletext/react": "^2.0.1",
+    "@react-three/drei": "^9.80.2",
+    "@react-three/fiber": "^8.13.6",
     "@sanity/icons": "^2",
     "@sanity/image-url": "^1.0.2",
     "@sanity/types": "^3",
@@ -35,6 +37,7 @@
     "framer-motion": "^9.0.2",
     "gsap": "^3.11.4",
     "locomotive-scroll": "^4.1.4",
+    "maath": "^0.7.0",
     "matter-js": "^0.19.0",
     "next": "^13",
     "next-sanity": "4.1.5",
@@ -54,7 +57,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "next-transpile-modules": "^10.0.1",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.6"
+    "tailwindcss": "^3.2.6",
+    "three": "^0.155.0"
   }
 }
