--- a/package.json
+++ b/package.json
@@ -23,43 +23,39 @@
     "start": "next start"
   },
   "dependencies": {
-    "@notionhq/client": "^2.2.3",
-    "@portabletext/react": "^2.0.1",
-    "@react-three/drei": "^9.80.2",
-    "@react-three/fiber": "^8.13.6",
-    "@sanity/icons": "^2",
+    "@portabletext/react": "^3.0.7",
+    "@react-three/drei": "^9.83.9",
+    "@react-three/fiber": "^8.14.2",
+    "@sanity/icons": "^2.4.1",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/types": "^3",
-    "@sanity/ui": "^1",
-    "@sanity/vision": "^3.4.0",
-    "@studio-freight/lenis": "^0.2.28",
-    "axios": "^1.3.3",
-    "framer-motion": "^9.0.2",
-    "gsap": "^3.11.4",
+    "@sanity/types": "^3.16.7",
+    "@sanity/ui": "^1.8.2",
+    "@sanity/vision": "^3.16.7",
+    "@studio-freight/lenis": "^1.0.23",
+    "axios": "^1.5.0",
+    "framer-motion": "^10.16.4",
+    "gsap": "^3.12.2",
     "locomotive-scroll": "^4.1.4",
-    "maath": "^0.7.0",
     "matter-js": "^0.19.0",
-    "next": "^13",
-    "next-sanity": "4.1.5",
-    "next-seo": "^5.15.0",
-    "notion-to-md": "^2.5.5",
+    "next": "^13.4.19",
+    "next-sanity": "5.5.3",
+    "next-seo": "^6.1.0",
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.0",
-    "postcss-preset-env": "^8.0.1",
-    "preact": "^10.12.1",
+    "postcss-preset-env": "^9.1.3",
     "react": "^18",
     "react-dom": "^18.2.0",
     "react-locomotive-scroll": "^0.2.2",
-    "react-markdown": "^8.0.5",
-    "sanity": "^3",
-    "sanity-plugin-iframe-pane": "^2.1.1",
-    "styled-components": "^5.3.6"
+    "sanity": "^3.16.7",
+    "sanity-plugin-iframe-pane": "^2.5.7",
+    "sass": "^1.67.0",
+    "styled-components": "^6.0.8"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "^10.4.15",
     "next-transpile-modules": "^10.0.1",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.6",
-    "three": "^0.155.0"
+    "postcss": "^8.4.29",
+    "tailwindcss": "^3.3.3",
+    "three": "^0.156.1"
   }
 }
