--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.15",
     "next-transpile-modules": "^10.0.1",
+    "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
     "three": "^0.156.1"
   }
