--- a/package.json
+++ b/package.json
@@ -35,13 +35,15 @@
     "@studio-freight/lenis": "^0.2.28",
     "axios": "^1.3.3",
     "framer-motion": "^9.0.2",
+    "google-auth-library": "^9.0.0",
     "gsap": "^3.11.4",
+    "jsonwebtoken": "^9.0.2",
     "locomotive-scroll": "^4.1.4",
     "maath": "^0.7.0",
     "matter-js": "^0.19.0",
-    "next": "^13",
-    "next-sanity": "4.1.5",
-    "next-seo": "^5.15.0",
+    "next": "^13.5.3",
+    "next-sanity": "5.5.4",
+    "next-seo": "^6.1.0",
     "notion-to-md": "^2.5.5",
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.0",
@@ -53,13 +55,13 @@
     "react-markdown": "^8.0.5",
     "sanity": "^3",
     "sanity-plugin-iframe-pane": "^2.1.1",
-    "styled-components": "^5.3.6"
+    "styled-components": "^6.0.8"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "^10.4.16",
     "next-transpile-modules": "^10.0.1",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.6",
+    "postcss": "^8.4.30",
+    "tailwindcss": "^3.3.3",
     "three": "^0.155.0"
   }
 }
