💄 update sanity cms

--- a/package.json
+++ b/package.json
@@ -23,36 +23,37 @@
     "start": "next start"
   },
   "dependencies": {
-    "@portabletext/react": "^3.0.7",
+    "@portabletext/react": "^3.0.11",
     "@react-three/drei": "^9.83.9",
     "@react-three/fiber": "^8.14.2",
-    "@sanity/icons": "^2.4.1",
+    "@sanity/icons": "^2.8.0",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/types": "^3.16.7",
-    "@sanity/ui": "^1.8.2",
-    "@sanity/vision": "^3.16.7",
+    "@sanity/types": "^3.23.4",
+    "@sanity/ui": "^1.9.3",
+    "@sanity/vision": "^3.23.4",
     "@studio-freight/lenis": "^1.0.23",
-    "axios": "^1.5.0",
-    "framer-motion": "^10.16.4",
-    "gsap": "^3.12.2",
+    "axios": "^1.6.3",
+    "framer-motion": "^10.16.16",
+    "gsap": "^3.12.4",
     "locomotive-scroll": "^4.1.4",
     "matter-js": "^0.19.0",
-    "next": "^13.5.2",
-    "next-sanity": "5.5.4",
-    "next-seo": "^6.1.0",
+    "next": "^14.0.4",
+    "next-sanity": "7.0.5",
+    "next-seo": "^6.4.0",
     "react": "^18",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-locomotive-scroll": "^0.2.2",
     "sanity": "^3.16.7",
-    "sanity-plugin-iframe-pane": "^2.5.7",
-    "sass": "^1.68.0",
-    "styled-components": "^6.0.8"
+    "sanity-plugin-vercel-deploy": "^3.3.4",
+    "sass": "^1.69.6",
+    "styled-components": "^6.1.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
     "next-transpile-modules": "^10.0.1",
-    "postcss": "^8.4.30",
-    "tailwindcss": "^3.3.3",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
     "three": "^0.156.1"
   }
 }
