--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.0",
     "postcss-preset-env": "^8.0.1",
+    "postmark": "^4.0.2",
     "preact": "^10.12.1",
     "react": "^18",
     "react-dom": "^18.2.0",
